<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dbow3</name>
    <version>0.0.1</version>
    <description>DBoW3 library for ROS2</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>See original package</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>opencv</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>